--- a/index.html
+++ b/index.html
@@ -1,35 +1,193 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Prime</title>
+  <meta charset="UTF-8">
+  <title>MyPrime</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
-    body { background:#111; color:white; font-family:Arial; }
-    .grid { display:grid; grid-template-columns:repeat(auto-fill,200px); gap:20px; }
-    .card { background:#222; padding:10px; }
-    a { color:white; text-decoration:none; }
+    * { margin:0; padding:0; box-sizing:border-box; }
+
+    body {
+      background:#141414;
+      font-family: Arial, sans-serif;
+      color:white;
+    }
+
+    /* NAVBAR */
+    .navbar {
+      position:fixed;
+      top:0;
+      width:100%;
+      background:linear-gradient(to bottom, rgba(0,0,0,0.9), transparent);
+      padding:20px;
+      z-index:10;
+    }
+
+    .logo {
+      font-size:28px;
+      font-weight:bold;
+      color:#e50914;
+    }
+
+    /* HERO */
+    .hero {
+      height:70vh;
+      background:url("https://images.unsplash.com/photo-1524985069026-dd778a71c7b4") center/cover no-repeat;
+      display:flex;
+      align-items:flex-end;
+      padding:50px;
+    }
+
+    .hero h1 {
+      font-size:48px;
+      max-width:500px;
+    }
+
+    /* SECTION */
+    .section {
+      padding:40px;
+      margin-top:-100px;
+    }
+
+    .section h2 {
+      margin-bottom:20px;
+    }
+
+    /* GRID */
+    .grid {
+      display:grid;
+      grid-template-columns:repeat(auto-fill,minmax(180px,1fr));
+      gap:15px;
+    }
+
+    .card {
+      position:relative;
+      overflow:hidden;
+      border-radius:6px;
+      cursor:pointer;
+      transition:transform 0.3s ease;
+    }
+
+    .card:hover {
+      transform:scale(1.1);
+      z-index:5;
+    }
+
+    .card img {
+      width:100%;
+      height:260px;
+      object-fit:cover;
+      display:block;
+    }
+
+    .card-title {
+      position:absolute;
+      bottom:0;
+      width:100%;
+      background:linear-gradient(to top, rgba(0,0,0,0.9), transparent);
+      padding:10px;
+      font-size:14px;
+    }
+
+    /* PLAYER MODAL */
+    .modal {
+      display:none;
+      position:fixed;
+      top:0;
+      left:0;
+      width:100%;
+      height:100%;
+      background:rgba(0,0,0,0.9);
+      justify-content:center;
+      align-items:center;
+      z-index:100;
+    }
+
+    .modal iframe {
+      width:80%;
+      height:80%;
+      border:none;
+    }
+
+    .close {
+      position:absolute;
+      top:20px;
+      right:30px;
+      font-size:30px;
+      cursor:pointer;
+    }
+
+    @media(max-width:768px){
+      .hero h1 { font-size:28px; }
+      .modal iframe { width:95%; height:60%; }
+    }
   </style>
 </head>
 <body>
 
-<h1>🎬 My Prime</h1>
-<div class="grid" id="videos"></div>
+<div class="navbar">
+  <div class="logo">MyPrime</div>
+</div>
+
+<div class="hero">
+  <h1>Unlimited Movies, Just For You</h1>
+</div>
+
+<div class="section">
+  <h2>Trending Now</h2>
+  <div class="grid" id="videoGrid"></div>
+</div>
+
+<!-- VIDEO MODAL -->
+<div class="modal" id="playerModal">
+  <div class="close" onclick="closePlayer()">✖</div>
+  <iframe id="playerFrame" allowfullscreen></iframe>
+</div>
 
 <script>
-fetch("YOUR_GOOGLE_SHEET_PUBLIC_JSON_LINK")
-  .then(res => res.json())
-  .then(data => {
-    let html = "";
-    data.forEach(video => {
-      html += `
-        <div class="card">
-          <a href="https://abyss.to/embed/${video.id}" target="_blank">
-            ${video.name}
-          </a>
-        </div>
-      `;
-    });
-    document.getElementById("videos").innerHTML = html;
+/* === Replace with your Google Sheet JSON API === */
+const API_URL = "YOUR_GOOGLE_SHEET_JSON_URL";
+
+/* Demo fallback data (remove after connecting sheet) */
+const demoVideos = [
+  { id:"ltJEfKQxR", name:"Big Buck Bunny" },
+  { id:"abc123", name:"Sample Movie" },
+  { id:"xyz789", name:"Another Movie" }
+];
+
+function renderVideos(data){
+  let html = "";
+  data.forEach(video => {
+    html += `
+      <div class="card" onclick="openPlayer('${video.id}')">
+        <img src="https://picsum.photos/300/450?random=${video.id}">
+        <div class="card-title">${video.name}</div>
+      </div>
+    `;
   });
+  document.getElementById("videoGrid").innerHTML = html;
+}
+
+/* Use demo for now */
+renderVideos(demoVideos);
+
+/* If using sheet, uncomment below
+fetch(API_URL)
+  .then(res => res.json())
+  .then(data => renderVideos(data));
+*/
+
+function openPlayer(id){
+  document.getElementById("playerFrame").src =
+    "https://abyss.to/embed/" + id;
+  document.getElementById("playerModal").style.display = "flex";
+}
+
+function closePlayer(){
+  document.getElementById("playerFrame").src = "";
+  document.getElementById("playerModal").style.display = "none";
+}
 </script>
 
 </body>
