Update API URL and modify video rendering logic

--- a/index.html
+++ b/index.html
@@ -146,21 +146,22 @@
 </div>
 
 <script>
-/* === Replace with your Google Sheet JSON API === */
-const API_URL = "https://script.google.com/macros/s/AKfycbyosC_-1h6A_8B3eBp2ZzEob5bs1y6TmH9wKhw-kiSIUMoynPOTk5-irgWfczVE7NBSDA/exec";
-
-/* Demo fallback data (remove after connecting sheet) */
-const demoVideos = [
-  { id:"ltJEfKQxR", name:"Big Buck Bunny" },
-  { id:"abc123", name:"Sample Movie" },
-  { id:"xyz789", name:"Another Movie" }
-];
+/* === Replace with your NEW Web App URL === */
+const API_URL = "https://script.google.com/macros/s/AKfycby7nVInrsJGSpe-_ZypEWzaFl2BWup12GHWq3sP9LPuTckDQwG_UgWr9tVzd43hxauWKg/exec"; 
 
 function renderVideos(data){
   let html = "";
+  
+  // If data is empty, show a message
+  if(data.length === 0) {
+    document.getElementById("videoGrid").innerHTML = "<p>No videos found.</p>";
+    return;
+  }
+
   data.forEach(video => {
+    // We pass the full embed URL (video.embed) to the openPlayer function
     html += `
-      <div class="card" onclick="openPlayer('${video.id}')">
+      <div class="card" onclick="openPlayer('${video.embed}')">
         <img src="https://picsum.photos/300/450?random=${video.id}">
         <div class="card-title">${video.name}</div>
       </div>
@@ -169,23 +170,29 @@ function renderVideos(data){
   document.getElementById("videoGrid").innerHTML = html;
 }
 
-/* Use demo for now */
-renderVideos(demoVideos);
-
-/* If using sheet, uncomment below
+/* FETCH DATA FROM API */
 fetch(API_URL)
   .then(res => res.json())
-  .then(data => renderVideos(data));
-*/
+  .then(data => {
+    console.log("Videos loaded:", data); // Debugging
+    renderVideos(data);
+  })
+  .catch(error => {
+    console.error("Error fetching data:", error);
+    document.getElementById("videoGrid").innerHTML = "<p>Error loading videos.</p>";
+  });
 
-function openPlayer(id){
-  document.getElementById("playerFrame").src =
-    "https://abyss.to/embed/" + id;
+/* OPEN PLAYER MODAL */
+// Now accepts the full URL, not just ID
+function openPlayer(url){
+  const frame = document.getElementById("playerFrame");
+  frame.src = url; 
   document.getElementById("playerModal").style.display = "flex";
 }
 
+/* CLOSE PLAYER MODAL */
 function closePlayer(){
-  document.getElementById("playerFrame").src = "";
+  document.getElementById("playerFrame").src = ""; // Stop audio/video
   document.getElementById("playerModal").style.display = "none";
 }
 </script>
